--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,11 +1,57 @@
-workflows:
-  my-workflow:
-    name: Meal App
+# workflows:
+#   my-workflow:
+#     name: Meal App
     
-    instance_type: mac_mini
-    max_build_duration: 60
+#     instance_type: mac_mini
+#     max_build_duration: 60
+#     environment:
+#       groups:
+#         - mealapp
+#       vars:
+#         app_name: "value here"
+workflows:
+  react-native-android:
+    name: React Native Android
+    max_build_duration: 120
+    instance_type: mac_mini_m1
     environment:
+      android_signing:
+        - keystore_reference
       groups:
         - mealapp
       vars:
-        app_name: "value here"
+        PACKAGE_NAME: "com.mohammad_azeem.foodapp"
+    scripts:
+      - name: Set Android SDK location
+        script: | 
+          echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/android/local.properties"
+      - name: Install npm dependencies
+        script: | 
+          npm install
+      # - name: Install Expo CLI and eject
+      #   script: | 
+      #     npm install -g expo-cli
+      #     expo eject
+      # - name: Set up app/build.gradle
+      #   script: | 
+      #     mv ./support-files/build.gradle android/app
+      - name: Build Android release
+        script: | 
+          LATEST_GOOGLE_PLAY_BUILD_NUMBER=$(google-play get-latest-build-number --package-name '$PACKAGE_NAME')
+          if [ -z LATEST_BUILD_NUMBER ]; then
+              # fallback in case no build number was found from google play. Alternatively, you can `exit 1` to fail the build
+              UPDATED_BUILD_NUMBER=$BUILD_NUMBER
+          else
+              UPDATED_BUILD_NUMBER=$(($LATEST_GOOGLE_PLAY_BUILD_NUMBER + 1))
+          fi
+          cd android && ./gradlew bundleRelease -PversionCode=$UPDATED_BUILD_NUMBER -PversionName=1.0.$UPDATED_BUILD_NUMBER
+    artifacts:
+      - android/app/build/outputs/**/*.aab
+    publishing:
+      email:
+        recipients:
+          -azeemmohammad377@gmail.com
+          
+        notify:
+          success: true
+          failure: false
