--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "food-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,7 +16,7 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "~2.9.1",
@@ -28,7 +27,9 @@
     "react-navigation-header-buttons": "^9.0.1",
     "react-navigation-material-bottom-tabs": "^2.3.5",
     "react-navigation-stack": "^2.10.4",
-    "react-navigation-tabs": "^2.11.2"
+    "react-navigation-tabs": "^2.11.2",
+    "expo-splash-screen": "~0.16.2",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
