--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,8 +15,8 @@ workflows:
     max_build_duration: 120
     instance_type: mac_mini_m1
     environment:
-      android_signing:
-        - keystore_reference
+      # android_signing:
+      #   - keystore_reference
       groups:
         - mealapp
       vars:
