--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -27,7 +27,7 @@ workflows:
           echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/android/local.properties"
       - name: Install npm dependencies
         script: | 
-          npm install
+          npm install --legacy-peer-deps
       # - name: Install Expo CLI and eject
       #   script: | 
       #     npm install -g expo-cli
