--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -44,7 +44,7 @@ workflows:
           # else
           #     UPDATED_BUILD_NUMBER=$(($LATEST_GOOGLE_PLAY_BUILD_NUMBER + 1))
           # fi
-          cd android && chmod +x ./gradlew -PversionCode=${BUILD_NUMBER} -PversionName=${VERSION_NUMBER} asssemblrRelease
+          cd android && ./gradlew -PversionCode=${BUILD_NUMBER} -PversionName=${VERSION_NUMBER} asssemblrRelease
     artifacts:
       - android/app/build/outputs/**/*.aab
     publishing:
