--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -45,6 +45,7 @@ workflows:
           #     UPDATED_BUILD_NUMBER=$(($LATEST_GOOGLE_PLAY_BUILD_NUMBER + 1))
           # fi
           cd android  
+          chmod +x gradlew
           ./gradlew asssemblrRelease
     artifacts:
       - android/app/build/outputs/**/*.aab
