--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -38,10 +38,10 @@ workflows:
       
           
          # react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res
-- name: Post webhook
+   - name: Post webhook
         script: | 
 TESTFILE=$1
-WEBHOOKURL=<insert your incoming webhook URL here>
+WEBHOOKURL=${URL}
 
 curl -d @$TESTFILE -H 'Content-Type: application/json' $WEBHOOKURL
     artifacts:
