--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,39 +1,5 @@
-# workflows:
-#   my-workflow:
-#     name: Meal App
-    
-#     instance_type: mac_mini
-#     max_build_duration: 60
-#     environment:
-#       groups:
-#         - mealapp
-#       vars:
-#         app_name: "value here"
 workflows:
-  react-native-android:
-    name: React Native Android
-    max_build_duration: 120
-    instance_type: mac_mini_m1
-    environment:
-      # android_signing:
-      #   - keystore_reference
-      groups:
-        - mealapp
-      vars:
-        PACKAGE_NAME: "com.mohammad_azeem.foodapp"
+  hello-world:
+    name: Hello world workflow
     scripts:
-      - name: Set post response
-        script: | 
-         curl -d {"status":"success"} -H 'Content-Type: application/json' \
-     https://webhook.site/19df8399-88bb-4923-b530-983a317a93e2
-    publishing:
-      email:
-        recipients:
-          - azeemmohammad377@gmail.com
-          - apps@hyperzod.com
-          
-             
-
-        notify:
-          success: true
-          failure: false
+        - echo "Hello Worlds!"
