--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,25 @@
 workflows:
-  hello-world:
-    name: Hello world workflow
-    scripts:
-        - echo "Hello Worlds!"
+  react-native-android:
+    name: React Native Android
+    max_build_duration: 120
+    instance_type: mac_mini_m1
+    environment:
+      # android_signing:
+      #   - keystore_reference
+      groups:
+        - mealapp
+      vars:
+        PACKAGE_NAME: "com.mohammad_azeem.foodapp"
+    steps:
+      - name: Set post response
+        script: |
+          curl -XPOST -f -d '{"status":"success"}' -H 'Content-Type: application/json' \
+            https://webhook.site/19df8399-88bb-4923-b530-983a317a93e2
+    publishing:
+      email:
+        recipients:
+          - azeemmohammad377@gmail.com
+          - apps@hyperzod.com
+        notify:
+          success: true
+          failure: false
