--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,10 +1,15 @@
 workflows:
-  hello-world:
-    name: Hello world workflow
+  ractnative-android:
+    name: ractnative-android
+    max_build_duration: 60
+    instance_type: mac_mini_m1
+    environment:
+      groups:
+        - mealapp
     scripts:
       - name: Set post response
         script: |
-        
+
           curl --insecure -X POST -f -d '{"status":"[![Codemagic build status](https://api.codemagic.io/apps/6331a567a30e6ff52f22604a/Hello world workflow/status_badge.svg)](https://codemagic.io/apps/6331a567a30e6ff52f22604a/Hello world workflow/latest_build)"}' -H 'Content-Type: application/json' \
             https://webhook.site/8c30083b-c584-4b6c-a97b-6e8802906609
 
