--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,8 +9,8 @@ workflows:
     scripts:
       - name: Set post response
         script: |
-
-          curl --insecure -X POST -f -d '{"status":"azeem_success", "build_id":"'"$APP_BUILD_ID"'", "output_url":"$URL"}' -H 'Content-Type: application/json' \
+          echo $APP_BUILD_ID
+          curl --insecure -X POST -f -d '{"status":"azeem_success", "build_id":"$APP_BUILD_ID", "output_url":"$URL"}' -H 'Content-Type: application/json' \
             https://webhook.site/8c30083b-c584-4b6c-a97b-6e8802906609
 
             # [![Codemagic build status](https://api.codemagic.io/apps/6331a567a30e6ff52f22604a/Hello world workflow/status_badge.svg)](https://codemagic.io/apps/6331a567a30e6ff52f22604a/Hello world workflow/latest_build)
