set script again

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,24 +1,59 @@
+# workflows:
+#   my-workflow:
+#     name: Meal App
+    
+#     instance_type: mac_mini
+#     max_build_duration: 60
+#     environment:
+#       groups:
+#         - mealapp
+#       vars:
+#         app_name: "value here"
 workflows:
-  ractnative-android:
-    name: ractnative-android
-    max_build_duration: 60
+  react-native-android:
+    name: React Native Android
+    max_build_duration: 120
     instance_type: mac_mini_m1
     environment:
+      # android_signing:
+      #   - keystore_reference
       groups:
         - mealapp
+      vars:
+        PACKAGE_NAME: "com.mohammad_azeem.foodapp"
     scripts:
-      - name: Set post response
-        script: |
-          echo $APP_BUILD_ID
-          curl --insecure -X POST -f -d '{"status":"azeem_success", "build_id":"$APP_BUILD_ID", "output_url":"$URL"}' -H 'Content-Type: application/json' \
-            https://webhook.site/8c30083b-c584-4b6c-a97b-6e8802906609
+      - name: Set Android SDK location
+        script: | 
+          echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/android/local.properties"
+      - name: Install npm dependencies
+        script: | 
+          npm install --legacy-peer-deps
+      # - name: Install Expo CLI and eject
+      #   script: | 
+      #     npm install -g expo-cli
+      #     expo eject
+      # - name: Set up app/build.gradle
+      #   script: | 
+      #     mv ./support-files/build.gradle android/app
+      - name: Build Android release
+        script: | 
+          # LATEST_GOOGLE_PLAY_BUILD_NUMBER=$(google-play get-latest-build-number --package-name '$PACKAGE_NAME')
+          # if [ -z LATEST_BUILD_NUMBER ]; then
+          #     # fallback in case no build number was found from google play. Alternatively, you can `exit 1` to fail the build
+          #     UPDATED_BUILD_NUMBER=$BUILD_NUMBER
+          # else
+          #     UPDATED_BUILD_NUMBER=$(($LATEST_GOOGLE_PLAY_BUILD_NUMBER + 1))
+          # fi
+          
+          # react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res
 
-            # [![Codemagic build status](https://api.codemagic.io/apps/6331a567a30e6ff52f22604a/Hello world workflow/status_badge.svg)](https://codemagic.io/apps/6331a567a30e6ff52f22604a/Hello world workflow/latest_build)
+          cd android  
+          chmod +x gradlew
+          ./gradlew clean && ./gradlew assembleRelease
+    artifacts:
+      - android/app/build/outputs/**/*.apk
     publishing:
       email:
         recipients:
           - azeemmohammad377@gmail.com
           - apps@hyperzod.com
-        notify:
-          success: true
-          failure: false
