--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -53,7 +53,13 @@ workflows:
     artifacts:
       - android/app/build/outputs/**/*.apk
     publishing:
-      email:
-        recipients:
-          - azeemmohammad377@gmail.com
-          - apps@hyperzod.com
+     slack:
+       channel: 'codemagic-alerts'
+       notify_on_build_start: true # To receive a notification when a build starts
+       notify:
+          success: true # To not receive a notification when a build succeeds
+          failure: true # To not receive a notification when a build succeeds
+      # email:
+      #   recipients:
+      #     - azeemmohammad377@gmail.com
+      #     - apps@hyperzod.com
